# fractales

./: CMakeLists.txt
src/: fractal.cpp
